--- a/app/templates/user_product_page.html
+++ b/app/templates/user_product_page.html
@@ -240,126 +240,6 @@
 
   <section id="main">
     <div class="container_12">
-       <div id="sidebar" class="grid_3">
-	      <aside id="categories_nav">
-		     <h3>Categories</h3>
-
-		     <nav class="left_menu">
-			    <ul>
-				   <li><a href="#">Solids <span>(21)</span></a></li>
-				   <li><a href="#">Liquids <span> (27)</span></a></li>
-				   <li><a href="#">Spray <span>(33)</span></a></li>
-				   <li><a href="#">Electric <span>(17)</span></a></li>
-				   <li><a href="#">For Cars <span>(23)</span></a></li>
-				   <li><a href="#">For Room <span>(7)</span></a></li>
-				   <li class="last"><a href="#">Other <span>(135)</span></a></li>
-			    </ul>
-		     </nav><!-- .left_menu -->
-	      </aside><!-- #categories_nav -->
-
-	      <aside id="specials" class="specials">
-		     <h3>Specials</h3>
-
-		     <ul>
-			    <li>
-				   <div class="prev">
-					  <a href="#"><img src="images/special1.png" alt="" title="" /></a>
-				   </div>
-
-				   <div class="cont">
-					  <a href="#">Honeysuckle Flameless Luminary Refill</a>
-					  <div class="prise"><span class="old">$177.00</span>$75.00</div>
-				   </div>
-			    </li>
-
-			    <li>
-				   <div class="prev">
-					  <a href="#"><img src="images/special2.png" alt="" title="" /></a>
-				   </div>
-
-				   <div class="cont">
-					  <a href="#">Honeysuckle Flameless Luminary Refill</a>
-					  <div class="prise"><span class="old">$177.00</span>$75.00</div>
-				   </div>
-			    </li>
-		     </ul>
-	      </aside><!-- #specials -->
-
-	      <aside id="newsletter_signup">
-		     <h3>Newsletter Signup</h3>
-		     <p>Phasellus vel ultricies felis. Duis
-		     rhoncus risus eu urna pretium.</p>
-
-		     <form class="newsletter">
-			    <input type="email" name="newsletter" class="your_email" value="" placeholder="Enter your email address..."/>
-			    <input type="submit" id="submit" value="Subscribe" />
-		     </form>
-	      </aside><!-- #newsletter_signup -->
-
-	      <aside id="banners">
-		<a id="ban_next" class="next arows" href="#"><span>Next</span></a>
-		<a id="ban_prev" class="prev arows" href="#"><span>Prev</span></a>
-
-		<h3>Banners</h3>
-
-		<div class="list_carousel">
-			<ul id="list_banners">
-				<li class="banner"><a href="#">
-					<div class="prev">
-						<img src="images/banner.png" alt="" title="" />
-					</div><!-- .prev -->
-
-					<h2>New smells</h2>
-
-					<p>in the next series</p>
- 			        </a></li>
-
-				<li class="banner"><a href="#">
-					<div class="prev">
-						<img src="images/banner.png" alt="" title="" />
-					</div><!-- .prev -->
-
-					<h2>New smells</h2>
-
-					<p>in the next series</p>
- 			        </a></li>
-
-				<li class="banner"><a href="#">
-					<div class="prev">
-						<img src="images/banner.png" alt="" title="" />
-					</div><!-- .prev -->
-
-					<h2>New smells</h2>
-
-					<p>in the next series</p>
- 			        </a></li>
-
-			</ul>
-		</div><!-- .list_carousel -->
-	      </aside><!-- #banners -->
-
-	      <aside id="tags">
-		     <h3>Tags</h3>
-		     <a class="t1" href="#">california</a>
-		     <a class="t2" href="#">canada</a>
-		     <a class="t3" href="#">canon</a>
-		     <a class="t4" href="#">cat</a>
-		     <a class="t5" href="#">chicago</a>
-		     <a class="t6" href="#">christmas</a>
-		     <a class="t7" href="#">mars</a>
-		     <a class="t8" href="#">church</a>
-		     <a class="t9" href="#">city</a>
-		     <a class="t10" href="#">clouds</a>
-		     <a class="t11" href="#">color</a>
-		     <a class="t12" href="#">concert</a>
-		     <a class="t13" href="#">dance</a>
-		     <a class="t14" href="#">day</a>
-		     <a class="t15" href="#">dog</a>
-		     <a class="t16" href="#">england</a>
-		     <a class="t17" href="#">europe</a>
-	      </aside><!-- #community_poll -->
-       </div><!-- .sidebar -->
-
        <div id="content" class="grid_9">
 	      <h1 class="page_title">{{ book['name'] }}</h1>
 
@@ -373,19 +253,6 @@
 						</a>
 					</div>
 				</div><!-- .prev -->
-
-				<ul class="pagination clearfix" id="thumblist">
-					<li><a class="zoomThumbActive" href='javascript:void(0);' rel="{gallery: 'gal1', smallimage: './images/produkt_slid.png',largeimage: './images/produkt_slid.png'}"><img src='images/produkt_slid.png' alt=""></a></li>
-					<li><a href='javascript:void(0);' rel="{gallery: 'gal1', smallimage: './images/produkt_slid1.png',largeimage: './images/produkt_slid1.png'}"><img src='images/produkt_slid1.png' alt=""></a></li>
-					<li><a href='javascript:void(0);' rel="{gallery: 'gal1', smallimage: './images/produkt_slid2.png',largeimage: './images/produkt_slid2.png'}"><img src='images/produkt_slid2.png' alt=""></a></li>
-					<li><a href='javascript:void(0);' rel="{gallery: 'gal1', smallimage: './images/produkt_slid3.png',largeimage: './images/produkt_slid3.png'}"><img src='images/produkt_slid3.png' alt=""></a></li>
-					<li><a href='javascript:void(0);' rel="{gallery: 'gal1', smallimage: './images/produkt_slid4.png',largeimage: './images/produkt_slid4.png'}"><img src='images/produkt_slid4.png' alt=""></a></li>
-				</ul>
-
-				<div class="next_prev">
-					<a id="img_prev" class="arows" href="#"><span>Prev</span></a>
-					<a id="img_next" class="arows" href="#"><span>Next</span></a>
-				</div><!-- . -->
 			</div><!-- .grid_4 -->
 
 			<div class="grid_5">
@@ -418,16 +285,20 @@
 
 					<div class="block_cart">
 						<div class="obn_like">
-							<div class="obn"><a href="#" class="obn">Add to Compare</a></div>
-							<div class="like"><a href="#" class="like">Add to Wishlist</a></div>
+                            <form method='POST' action="/book/collect" id="thisform1">
+                                <input type="hidden" name="book_id" value={{book['id']}}>
+                                <div class="like"><a href="javascript:void(0)" class="like" onclick="document.getElementById('thisform1').submit()">添加收藏夹</a></div>
+                            </form>
+                            <iframe id="thisform1" name="id_iframe" style="display:none;" src="about:blank"></iframe> 
 						</div>
 
 						<div class="cart">
-                            <form method='POST' action="/book/collect" id="thisform">
+                            <form method='POST' action="/book/cart" id="thisform">
                             <input type="hidden" name="book_id" value={{book['id']}}>
-							<a href="javascript:void(0)" class="bay" onclick="document.getElementById('thisform').submit()">Add to Cart</a>
+							<a href="javascript:void(0)" class="bay" onclick="document.getElementById('thisform').submit()">加入购物车</a>
 							<span>Quantity:</span>
                             </form>
+                            <iframe id="thisform" name="id_iframe" style="display:none" src="about:blank"></iframe> 
 						</div>
 						<div class="clear"></div>
 					</div><!-- .block_cart -->
