--- a/app/templates/manage_newbook.html
+++ b/app/templates/manage_newbook.html
@@ -654,50 +654,10 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="col-sm-4">
-                                        <div class="form-check">
-                                            <label class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input">
-                                                <span class="custom-control-indicator"></span>
-                                                <span class="custom-control-description">Check this custom checkbox</span>
-                                            </label>
-                                        </div>
-                                        <div class="form-check bd-example-indeterminate">
-                                            <label class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input">
-                                                <span class="custom-control-indicator"></span>
-                                                <span class="custom-control-description">Check this custom checkbox</span>
-                                            </label>
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="custom-control custom-checkbox">
-                                                <input type="checkbox" class="custom-control-input">
-                                                <span class="custom-control-indicator"></span>
-                                                <span class="custom-control-description">Check this custom checkbox</span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4">
-                                        <div class="form-check">
-                                            <label class="custom-control custom-radio">
-                                                <input id="radio1" name="radio" type="radio" class="custom-control-input">
-                                                <span class="custom-control-indicator"></span>
-                                                <span class="custom-control-description">Toggle this custom radio</span>
-                                            </label>
-                                        </div>
-                                        <div class="form-check">
-                                            <label class="custom-control custom-radio">
-                                                <input id="radio2" name="radio" type="radio" class="custom-control-input">
-                                                <span class="custom-control-indicator"></span>
-                                                <span class="custom-control-description">Or toggle this other custom radio</span>
-                                            </label>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="form-group">
                                     <label>图书类别</label>
                                     <select class="custom-select col-12" name="book_class">
-                                        <option selected>Choose...</option>
+                                        <option selected value=1>Choose...</option>
                                         {% for class in class_list %}
                                         <option value={{class.classify_id}}>{{class.classify_name}}</option>
                                         {% endfor %}
