--- a/app/templates/user_collect.html
+++ b/app/templates/user_collect.html
@@ -354,18 +354,17 @@
 			    <a class="sort_up" href="#">&#8593;</a>
 		     </div><!-- .sort -->
 	      </div><!-- .options -->
-	      
+	      {%for book in collects%}
 	      <div class="grid_product">
 		     <div class="grid_3 product">
 			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_1.png" alt="" title="" /></a>
+				   <a href="{{url_for('book_detail',book_id=book['id'])}}"><img src="{{url_for('static',filename=book['image'])}}" alt="" title="" /></a>
 			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+			    <h3 class="title">{{book['name']}}</h3>
 			    <div class="cart">
 				   <div class="price">
 					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
+						 <div class="price_new">${{book['price']}}</div>
 					  </div>
 				   </div>
 				   <a href="#" class="obn"></a>
@@ -373,213 +372,7 @@
 				   <a href="#" class="bay"></a>
 			    </div><!-- .cart -->
 		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <img class="sale" src="images/sale.png" alt="Sale"/>
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_2.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <img class="sale" src="images/new.png" alt="New"/>
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_3.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <img class="sale" src="images/top.png" alt="Top"/>
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_4.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_5.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_6.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <img class="sale" src="images/sale.png" alt="Sale"/>
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_7.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <img class="sale" src="images/top.png" alt="Top"/>
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/produkt_slid1.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <img class="sale" src="images/new.png" alt="New"/>
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_2.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_8.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <img class="sale" src="images/sale.png" alt="Sale"/>
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_9.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-		     
-		     <div class="grid_3 product">
-			    <img class="sale" src="images/new.png" alt="New"/>
-			    <div class="prev">
-				   <a href="product_page.html"><img src="images/product_10.png" alt="" title="" /></a>
-			    </div><!-- .prev -->
-			    <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-			    <div class="cart">
-				   <div class="price">
-					  <div class="vert">
-						 <div class="price_new">$550.00</div>
-						 <div class="price_old">$725.00</div>
-					  </div>
-				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
-			    </div><!-- .cart -->
-		     </div><!-- .grid_3 -->
-	    
+          {%endfor%}
 	      <div class="clear"></div>
 	      </div><!-- .grid_product -->
 	      
