--- a/app/templates/user_shopping_cart.html
+++ b/app/templates/user_shopping_cart.html
@@ -10,7 +10,7 @@
   <title>Shoping cart</title>
 
   <link rel="shortcut icon" href="{{url_for('static',filename='favicon.ico')}}">
-  <link href="{{url_for('static',filename='css/usarstyle.css')}}" media="screen" rel="stylesheet" type="text/css">
+  <link href="{{url_for('static',filename='css/userstyle.css')}}" media="screen" rel="stylesheet" type="text/css">
   <link href="{{url_for('static',filename='css/grid.css')}}" media="screen" rel="stylesheet" type="text/css">
 
   <script src="{{url_for('static',filename='js/jquery-1.7.2.min.js')}}" ></script>
@@ -226,30 +226,26 @@
 		     <th class="bg subtotal">Subtotal</th>
 		     <th class="close"> </th>
 	      </tr>
+          <form method='POST' action="/book/add_detail">
+          {%for cart in carts%}
 	      <tr>
 		     <td class="images"><a href="product_page.html"><img src="images/product_6.png" alt="Product 6"></a></td>
-		     <td class="bg name">Paddywax Fragrance Diffuser Set, Gardenia Tuberose,<br/> Jasmine, 4-Ounces</td>
+		     <td class="bg name">{{cart.book_name}}<br/> Jasmine, 4-Ounces</td>
 		     <td class="edit"><a title="Edit" href="#">Edit</a></td>
 		     <td class="bg price">$75.00</td>
 		     <td class="qty"><input type="text" name="" value="" placeholder="1000" /></td>
 		     <td class="bg subtotal">$750.00</td>
 		     <td class="close"><a title="close" class="close" href="#"></a></td>
 	      </tr>
-	      <tr>
-		     <td class="images"><a href="product_page.html"><img src="images/produkt_slid1.png" alt="Product Slide 1"></a></td>
-		     <td class="bg name">California Scents Spillproof Organic Air Fresheners,<br/> Coronado Cherry, 1.5 Ounce Cannister</td>
-		     <td class="edit"><a title="Edit" href="#">Edit</a></td>
-		     <td class="bg price">$75.00</td>
-		     <td class="qty"><input type="text" name="" value="" placeholder="1000" /></td>
-		     <td class="bg subtotal">$750.00</td>
-		     <td class="close"><a title="close" class="close" href="#"></a></td>
-	      </tr>
+          {%endfor%}
+          <input type="hidden" value=carts id="carts">
 	      <tr>
 		     <td colspan="7" class="cart_but">
 			    <button class="continue"><span>icon</span>Continue Shopping</button>
-			    <button class="update"><span>icon</span>Update Shopping Cart</button>
+			    <button type="submit"><span>icon</span>提交订单</button>
 		     </td>
 	      </tr>
+          </form>
        </table>
        </div><!-- .grid_12 -->
 
