--- a/app/templates/user_shopping_cart.html
+++ b/app/templates/user_shopping_cart.html
@@ -238,7 +238,8 @@
 		     <td class="close"><a title="close" class="close" href="#"></a></td>
 	      </tr>
           {%endfor%}
-          <input type="hidden" value=carts id="carts">
+            <input type="hidden" value='{{books_id}}' name="books_id">
+            
 	      <tr>
 		     <td colspan="7" class="cart_but">
 			    <button class="continue"><span>icon</span>Continue Shopping</button>
